--- a/app/src/main/res/layout/activity_algoritma_bahcesi_button5_3.xml
+++ b/app/src/main/res/layout/activity_algoritma_bahcesi_button5_3.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/algos5"
     android:layout_height="match_parent"
-    android:background="@drawable/algos2"
-    tools:context=".AlgoritmaBahcesi2.AlgoritmaBahcesiButton2_3">
+    tools:context=".AlgoritmaBahcesi5.AlgoritmaBahcesiButton5_3">
 
     <TextView
-        android:id="@+id/textView69"
+        android:id="@+id/textView100"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -18,15 +18,15 @@
         android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
         android:textColor="@color/colorAccent"
-        android:textSize="32sp"
-        android:text="\n Goster(işte geliyor) kodundaki işte geliyor nedir ? \n"
-        app:layout_constraintBottom_toTopOf="@+id/btnCevapAlgo2_3_1"
+        android:textSize="24sp"
+        android:text="\n topla() fonksiyonu ile çalışmak için doğru kullanım nedir ?  \n"
+        app:layout_constraintBottom_toTopOf="@+id/btnCevapAlgo5_3_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btnCevapAlgo2_3_1"
+        android:id="@+id/btnCevapAlgo5_3_1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -34,16 +34,17 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips_button"
-        android:onClick="cevapAlgo2_3_1"
-        android:text="\n Fonksiyondur \n"
         android:textColor="@color/colorPrimary"
-        app:layout_constraintBottom_toTopOf="@+id/btnCevapAlgo2_3_2"
+        android:onClick="cevapAlgo5_3_1"
+        android:text="\n topla(3-4) \n"
+
+        app:layout_constraintBottom_toTopOf="@+id/btnCevapAlgo5_3_2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView69" />
+        app:layout_constraintTop_toBottomOf="@+id/textView100" />
 
     <Button
-        android:id="@+id/btnCevapAlgo2_3_2"
+        android:id="@+id/btnCevapAlgo5_3_2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -51,16 +52,16 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips_button"
-        android:onClick="cevapAlgo2_3_2"
-        android:text="\n Değişkendir \n"
+        android:onClick="cevapAlgo5_3_2"
+        android:text="\n topla(5,10) \n"
         android:textColor="@color/colorPrimary"
-        app:layout_constraintBottom_toTopOf="@+id/btnCevapAlgo2_3_3"
+        app:layout_constraintBottom_toTopOf="@+id/btnCevapAlgo5_3_3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnCevapAlgo2_3_1" />
+        app:layout_constraintTop_toBottomOf="@+id/btnCevapAlgo5_3_1" />
 
     <Button
-        android:id="@+id/btnCevapAlgo2_3_3"
+        android:id="@+id/btnCevapAlgo5_3_3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -68,16 +69,16 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips_button"
-        android:onClick="cevapAlgo2_3_3"
-        android:text="\n Parametredir \n"
+        android:onClick="cevapAlgo5_3_3"
+        android:text="\n topla(3+5) \n"
         android:textColor="@color/colorPrimary"
-        app:layout_constraintBottom_toTopOf="@+id/btnCevapAlgo2_3_4"
+        app:layout_constraintBottom_toTopOf="@+id/btnCevapAlgo5_3_4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnCevapAlgo2_3_2" />
+        app:layout_constraintTop_toBottomOf="@+id/btnCevapAlgo5_3_2" />
 
     <Button
-        android:id="@+id/btnCevapAlgo2_3_4"
+        android:id="@+id/btnCevapAlgo5_3_4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
@@ -85,12 +86,11 @@
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="32dp"
         android:background="@drawable/elips_button"
+        android:onClick="cevapAlgo5_3_4"
+        android:text="\n topla(4/4) \n"
         android:textColor="@color/colorPrimary"
-        android:onClick="cevapAlgo2_3_4"
-        android:text="\n Değişken türüdür \n"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnCevapAlgo2_3_3" />
+        app:layout_constraintTop_toBottomOf="@+id/btnCevapAlgo5_3_3" />
 </androidx.constraintlayout.widget.ConstraintLayout>
