--- a/app/src/main/res/layout/activity_algoritma_bahcesi_button4_3.xml
+++ b/app/src/main/res/layout/activity_algoritma_bahcesi_button4_3.xml
@@ -33,16 +33,16 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="\n sayi = 5 \n Goster(sayi) }\n "
+        android:text="\n sayi = 5 \n Goster(sayi) \n "
         android:textColor="@color/colorAccent"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView95"
+        app:layout_constraintBottom_toTopOf="@+id/tvCevapAlgo4_3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView93" />
 
     <TextView
-        android:id="@+id/textView95"
+        android:id="@+id/tvCevapAlgo4_3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -74,7 +74,7 @@
         app:layout_constraintBottom_toTopOf="@+id/btnDevamAlgo4_3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView95" />
+        app:layout_constraintTop_toBottomOf="@+id/tvCevapAlgo4_3" />
 
     <Button
         android:id="@+id/btnDevamAlgo4_3"
