--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimary">#7bfffb</color>
     <color name="colorPrimaryDark">#0df934</color>
     <color name="colorAccent">#7bfffb</color>
 </resources>
